# GNN_hackathon

./: .gitignore  requirements.py
gnn-hackathon/: README.md  pyproject.toml  run-gnn.py
gnn-hackathon/slurm_scripts/: mikkjo_test_script.sh
gnn-hackathon/src/: admet_datamodule.py  custom_layers.py  gnn_models.py  herg_datamodule.py  herg_start.py  run-gnn.py  simple_dummy.py  submit.py  test_func.py  train.py
gnn-hackathon/src/gnn_hackathon/: core.py
gnn-hackathon/tests/: test_core.py
slurm_scripts/: mikkjo_test_script.sh
